# veighnaProject

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLAN.md  README.md  compose.yaml  pyproject.toml
gateways/: __init__.py
libs/: __init__.py
scripts/: __init__.py  build_benchmark_reference.py  build_explicit_model_schedule_sample.py  build_research_sample.py  build_standard_data.py  build_target_weights.py  check_qlib_consistency.py  compare_benchmark_analytics.py  compare_campaigns.py  compare_execution_runs.py  compare_portfolios.py  compare_rolling_campaigns.py  dev.ps1  export_qlib_provider.py  ingest_execution_task.py  list_benchmark_analytics.py  list_campaigns.py  list_execution_analytics.py  list_execution_tasks.py  list_model_schedules.py  list_paper_runs.py  list_portfolio_analytics.py  list_research_runs.py  list_schedule_audits.py  list_shadow_sessions.py  list_target_weights.py  load_master_data.py  plan_rebalance.py  reconcile_paper_run.py  reconcile_shadow_session.py  replay_sample.py  run_benchmark_analytics.py  run_daily_inference.py  run_data_dq.py  run_execution_tca.py  run_paper_execution.py  run_portfolio_analytics.py  run_recorder_smoke.py  run_rolling_campaign.py  run_shadow_session.py  (+3 more)
tests/: bootstrap_helpers.py  execution_helpers.py  m11_analytics_helpers.py  m12_portfolio_helpers.py  m13_benchmark_helpers.py  m14_campaign_helpers.py  m15_rolling_helpers.py  m16_schedule_helpers.py  planning_helpers.py  research_helpers.py  shadow_helpers.py  test_load_master_data.py  test_m10_l1_fifo_allocation.py  test_m10_l1_partial_fill.py  test_m10_partial_fill_to_ledger.py  test_m10_shadow_idempotency.py  test_m10_time_in_force.py  test_m11_execution_compare.py  test_m11_execution_tca.py  test_m11_metrics.py  (+62 more)
(+243 files in other folders)
